--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 ****** PROJECT SETUP
 ******************************************* */
 
+/* *FONT IMPORTS */
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@1,900&family=Montserrat:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 /* VARIABLES */
 :root {
   /* MAIN COLORS */
@@ -10,7 +14,8 @@
   --accent: red;
 
   /* FONTS */
-  --title: serif;
+
+  --title: Poppins;
   --text: aerial;
 }
 
@@ -19,7 +24,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* outline: 2px solid gold; */
+  /* background-color: #0b0c10; */
+  outline: 1px solid gold;
 }
 
 h1,
@@ -29,12 +35,91 @@ h4,
 h5,
 h6 {
   font-family: var(--title);
+  color: #c5c6c7;
 }
 
 body {
   font-family: var(--text);
+  background-color: #0b0c10;
 }
 
 /* *******************************************
 ****** PROJECT STYLES
 ******************************************* */
+.container {
+  font-family: Poppins;
+  font-size: 55px;
+  font-weight: 600;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 3fr 3fr 20fr;
+  padding: 0;
+}
+
+.kel {
+  text-shadow: 0 1px white;
+  text-align: right;
+  grid-row: 1/ 2;
+  margin-bottom: 0;
+  background-color: #c5c6c7;
+  color: #0b0c10;
+  padding: 0;
+  margin-bottom: 0;
+
+}
+
+.str {
+  grid-row: 2 / 3;
+  text-align: right;
+  color: #c5c6c7;
+}
+
+.other {
+  margin: 0;
+  text-shadow: 0 1px white;
+  grid-row: 2 / 4;
+  grid-column: 2 / 3;
+  background-color: #c5c6c7;
+  color: #0b0c10;
+}
+
+.container-fluid {
+  height: 80px;
+  margin: 0;
+}
+
+.navbar-text {
+  font-family: Poppins;
+  font-size: 20px;
+  
+}
+
+.navbar-text a {
+  text-decoration: none;
+  padding: 10px;
+  margin-left: 7px;
+  color: #c5c6c7;
+}
+.nav {
+  height: 100px;
+  background-color: #0b0c10;
+}
+
+.navlist {
+  display: flex;
+  list-style: none;
+  /* padding: 25px; */
+}
+
+.navlist li a {
+  justify-content: space-evenly;
+  border: 1px solid green;
+  font-family: Poppins;
+  font-size: 20px;
+  color:#c5c6c7;
+  text-decoration: none;
+  margin: 0px;
+
+}
+
+
