--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,19 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  /* background-color: #fff; */
-}
-
                        /* !HEADER */
-.maintitle {
-  /* height: 100vh; */
-}
-
 .container {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: repeat(2, 1fr);
   padding: 0;
-  background-color: #fff;
 }
 
 .name {
-  font-size: 3.3em;
+  height: 75vh;
+  background: url(/img/jakub-sofranko-QxO4eW3_cAw-unsplash.jpg);
+  background-size: 100% 200%;
+  background-position: top;
+  /* background-color: #0b0c10; */
+  font-size: 3.7em;
   font-family: "Poppins", sans-serif;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
@@ -32,38 +25,45 @@ body {
 }
 
 .firstname {
-  
+  /* color: rgb(27, 83, 168); */
+  /* opacity: .8; */
+  /* text-shadow: 1px 1px #fff; */
   grid-column: 1/2;
   grid-row: 1/2;
   font-weight: 900;
   margin-top: 2rem;
-  background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg) no-repeat;
+  margin-left: 1rem;
+    background-image: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  background-size: 350px 60px;
+  background-clip: text;
+  background-size: 200%;
+  background-position: left;
 }
 
 .lastname {
   position: relative;
-  top: -1.03em;
-  left: -.35em;
-  grid-column: 3/4;
+  top: -4rem;
+  left: -2rem;
+  grid-column: 2/4;
   grid-row: 2/3;
   background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg) no-repeat;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  background-size: 350px 60px;
+  background-clip: text;
+  background-size: 500px 140px;
+  background-position: bottom left;
   font-weight: 900;
-  transform: rotate(20deg);
-  
+  /* transform: rotate(10deg); */
 }
                        /* !NAVIGATION */
 .navbar {
   padding: 0;
-  height: 18%;
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
   overflow: hidden;
   position: fixed;
-  /* position: -webkit-sticky; */
   bottom: 0;
   width: 100%;
   background-color: #0b0c10;
@@ -73,7 +73,7 @@ body {
 
 .navbar a {
   font-family: "Poppins", sans-serif;
-  float: left;
+  /* float: left; */
   display: block;
   color: #fff;
   text-align: center;
@@ -90,12 +90,13 @@ body {
   color: #8fc1e3;
 }
 
-
 #about {
+  right: -10px;
   border-right: 1px solid #fff;
 }
 
 #work {
+  right: -10px;
   border-right: 1px solid #fff;
 }
 
@@ -105,10 +106,10 @@ body {
                       /* !ABOUT SECTION */
 .aboutsec {
   background-color: #0b0c10;
+  /* opacity: .5; */
 }
 #statement {
   color: #fff;
-  /* color: #0b0c10; */
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 2fr;
   grid-template-rows: repeat(5, 1fr); 
@@ -136,6 +137,7 @@ body {
 
 .outof-word {
   font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
 }
 
 .denver {
@@ -164,95 +166,120 @@ body {
 
                        /* !SKILLS SECTION */
 
+.skillscontainer {
+  border-top: 2px solid #8fc1e3;
+  background-color: #0b0c10;
+  padding-bottom: 2em;
+}
+
 .skills {
-  background: yellow;
+  margin-top: 1em;
 }
 
 .myskills {
-  font-family: 'Montserrat', sans-serif;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
   font-weight: 900;
+  font-size: 2em;
   text-align: center;
 }
-                     /* !MY.WORK SECTION */
-#creations {
+
+.skillgallery {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
-.card-overview.hydrated {
+.skillgallery img {
+  margin: .5em;
+  width: 10vw;
+  height: 10vh;
+}
+
+.skill {
+  display: grid;
+  background-color: #0b0c10;
+  border: 1px solid #fff;
+  padding: .5em;
+  margin: 5px;
+}
+
+.desc {
+  padding-top: 5px;
+  border-top: 1px solid #fff;
+  text-align: center;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: .2em;
+}
+                     /* !MY.WORK SECTION */
+.my-work {
+  background-color: #0b0c10;
+}
+
+.work-heading {
+  border-top: 2px solid #8fc1e3;
+  margin: 0 auto;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900;
+  font-size: 2em;
+  text-align: center;
+}
+
+#creations {
+  background-color: #0b0c10;
+  display: grid;
+  grid-template-columns: 1fr 15fr 1fr;
+  grid-template-rows: auto;
+}
+
+.card {
+  display: grid;
+  grid-column: 2/3;
+}
+
+.card-section {
+  border: 2px outset #fff;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
   padding: 10px;
-  border: 2px outset #333;
+  background-color: #333;
+  grid-column: 2/3;
 }
 
-/* .card-overview.hydrated::part(body) {
-  border-top: 4px solid #8fc1e3;
-} */
-
-.card-overview.hydrated::part(image) {
-  border: 4px solid #8fc1e3;
-  /* border-left: 4px solid #8fc1e3;
-  border-top: 4px solid #8fc1e3; */
+.card-section a {
+  border: 2px outset #8fc1e3;
+  padding: 15px;
+  background-color: #333;
 }
 
-.projname {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  text-align: center;
-  margin: 0;
-  padding: 0;
+#codebtn {
+  margin-right: .5em;
 }
 
-.description {
-  text-align: center;
-  font-size: .8em;
+#projectbtn {
+  margin-left: .5em;
 }
-
-sl-button {
-  display: block;
-  margin: 1em;
-}
-
-.git::part(base) {
-  border: 2px solid #0b0c10
-}
-
-.git::part(base):hover {
-  border: 2px solid goldenrod
-}
-
-.live::part(base) {
-  border: 2px solid #0b0c10
-}
-
-.live::part(base):hover {
-  border: 2px solid goldenrod
-}
-
                           /* !CONTACT SECTION */
 .icons {
+  background-color: #fff;
   display: flex;
   margin:1em 1em 0 0;
   justify-content: flex-end;
 }
 
 .icons img {
-  border: 1px solid black;
-  background-color: #8fc1e3;
-  border-radius: 50%;
   padding: .5em;
   height: 2.5em;
   width: 2.5em;
 }
 
-.aboutsec {
-}
-
-#contactme {
+/* #contactme {
   display: flex;
   justify-content: center;
   padding: 5em;
-}
+} */
 
 .grabber {
   display: grid;
@@ -275,8 +302,11 @@ sl-button {
 }
 
 .awesome {
-  font-family: "Bangers", cursive;
+  font-family: "Poppins", cursive;
+  font-weight: 900;
+  font-size: 2.3em;
   grid-row: 3 / 4;
   grid-column: 2 / 4;
   margin: auto;
+  transform: rotate(10deg);
 }
