--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,11 @@ body {
   margin: 0;
 }
 .name {
-  margin-left: -1.7em;
+  position: relative;
+  top: 1em;
+  /* margin-left: -1em; */
   height: 20vh;
-  width: 100vw;
+  width: 100%;
   /* background: url(/img/jakub-sofranko-QxO4eW3_cAw-unsplash.jpg); */
   /* background-size: 100% 200%; */
   /* background-position: top; */
@@ -36,33 +38,33 @@ body {
 }
 
 .firstname {
-  font-size: 4em;
+  font-size: 3.5em;
   background: rgb(17,94,108);
   background: linear-gradient(180deg, rgb(14, 80, 92) 43%, rgba(93,131,109,1) 70%, rgba(169,161,103,1) 96%);
   grid-column: 2/3;
   grid-row: 1/2;
   font-weight: 900;
-  padding-top: 0;
-  margin-bottom: -.8em;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
 }
 
 .lastname {
-  width: 100vw;
-  font-size: 4em;
-  position: relative;
+  width: 75vw;
+  font-size: 3.5em;
+  position: fixed;
   left: -1em;
+  top: -1em;
   grid-column: 3/6;
   grid-row: 2/3;
   background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
-  background-size: 500px 120px;
-  background-position: 0% 98%;
+  background-size: 460px 120px;
+  background-position: 0% 80%;
   font-weight: 900;
+  padding-bottom: 10px;
 }
 
 .navbarwide {
@@ -70,7 +72,9 @@ body {
 }
                     /* !ABOUT SECTION */
 .aboutsec {
-  padding-top: 2em;
+  margin-top: 3em;
+  padding-left: .5em;
+  padding-right: .5em;
   display: grid;
   font-size: 1.5em;
   height: 65vh;
@@ -87,7 +91,7 @@ body {
   grid-template-columns: 1fr 1fr 2fr 2fr;
   /* grid-template-rows: repeat(2, 1fr 2fr);  */
   grid-template-rows: auto;
-  padding-left: .5em;
+  padding-left: 1em;
   padding-right: .5em;
 }
 
@@ -162,13 +166,14 @@ body {
 
 .skills {
   padding-top: 1em;
+  font-size: 2em;
 }
 
 .myskills {
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
-  font-size: 2em;
+  font-size: 1.8em;
   text-align: center;
 }
 
@@ -209,14 +214,21 @@ body {
 
 .my-work {
   background-color: #0b0c10;
+  font-size: 2.2em;
+}
+
+span.period {
+  font-size: 1.5em;
+  color: #8fc1e3;
 }
 
 .work-heading {
+  padding-bottom: 1em;
+  font-size: 1.8em;
   margin: 0 auto;
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
-  font-size: 2em;
   text-align: center;
 }
 
@@ -268,6 +280,22 @@ body {
   opacity: .5;
 }
 
+.bitaboutme {
+  font-family: "Poppins", sans-serif;
+  font-size: 2em;
+  font-weight: 600;
+  color: #fff;
+  text-align: center;
+}
+
+.myself {
+  padding-top: 1em;
+  color: rgb(169,161,103);
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2em;
+}
+
 .icons {
   height: 20vh;
   background-color: #fff;
@@ -279,9 +307,10 @@ body {
 }
 
 .icons img {
+  margin-top: 1em;
   padding: .5em;
-  height: 2.5em;
-  width: 2.5em;
+  height: 3.5em;
+  width: 3.5em;
 }
 
 .grabber {
@@ -289,11 +318,12 @@ body {
   background-color: #0b0c10;
   color: #fff;
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr 3fr 1fr;
   grid-template-rows: 1fr 1fr 2fr;
 }
 
 .invitation {
+  display: none;
   font-size: 2.2em;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
@@ -302,6 +332,7 @@ body {
 }
 
 .finale {
+  display: none;
   font-size: 2.2em;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
@@ -310,6 +341,7 @@ body {
 }
 
 .awesome {
+  display: none;
   font-family: "Poppins", cursive;
   font-weight: 900;
   font-size: 2.3em;
@@ -326,16 +358,20 @@ body {
 }
 
 .guitars {
-  grid-column: 1/5;
-  grid-row: 3/4;
-  height: 400px;
-  width: 100%;
+  grid-column: 2/5;
+  grid-row: 1/4;
+  /* height: 400px; */
+  width: 70vw;
 }
 
 #contactme {
   background-color: #0b0c10;
   display: flex;
   justify-content: center;
+}
+
+form {
+  padding-top: 1em;
 }
 
 label {
@@ -357,10 +393,9 @@ button {
 /* !Navigation */
 .navbar {
   font-size: 1em;
-  padding: 0;
-  height: 8vh;
+  padding: 5px;
+  height: 10vh;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   overflow: hidden;
   position: fixed;
@@ -372,12 +407,10 @@ button {
 }
 
 .navbar a {
-  margin: 0 auto;
-  margin-top: .5em;
+  margin: auto;
   font-family: "Poppins", sans-serif;
-  display: block;
+  font-weight: 900;
   color: #fff;
-  /* text-align: center; */
   text-decoration: none;
 }
 
@@ -386,7 +419,12 @@ button {
 }
 
 .active {
-  color: #8fc1e3;
+  color:rgba(169,161,103,.6);
+}
+
+#skills {
+  padding-right: 1em;
+  border-right: 1px solid #fff;
 }
 
 #about {
