--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,17 +5,48 @@
     box-sizing: border-box;
   }
   
+  .navbarwide {
+    position: relative;
+    top: 4.5em;
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+    height: 5vh;
+    font-size: 2em;
+    font-weight: 900;
+    padding: 0 2em 0 1em;
+    transform: rotate(-10deg);
+  }
+  .navbarwide a {
+    color: #fff;
+  }
+
+  a.active {
+    color: rgba(169,161,103,.6);
+  }
+
+  #skillswide {
+    transform: rotate(30deg);
+  }
+
+  #workwide {
+    transform: rotate(30deg);
+  }
+
+  #aboutwide {
+    transform: rotate(30deg);
+  }
+
+  #contactwide {
+    transform: rotate(30deg);
+  }
+
   .navbar {
     display: none;
   }
 
   .name {
-    /* margin-top: -1.5em; */
-    font-size: 1.5em;
-  }
-
-  .firstname {
-    /* margin-top: -.5em; */
+    font-size: 1.8em;
   }
 
   .lastname {
@@ -31,76 +62,10 @@
     padding-top: 2.5em;
     font-size: 2.5em;
   }
-  /* .navbarwide {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .navbarwide a {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 2em;
-    transform: rotate(20deg);
-  } */
-
-   /* .name {
-    font-size: 2.5em;
-    margin-left: 1em;
-    display: inline;
-    grid-template-columns: repeat(2, 1fr 2fr);
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-  }
-
-  .firstname {
-    font-size: 2.5em;
-    grid-column: 1/2;
-  } */
-
-  /* .lastname {
-    margin-left: 2em;
-    margin-top: -.5em;
-    font-size: 2.5em;
-    grid-column: 3/4;
-    grid-row: 2/3;
-    background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-    background-size: 150% 115%;
-    background-position: 0 100%;
-  }  */
-
-  /* .abouttrans {
-    top: 3rem;
-  } */
-
-  /* .title {
-    grid-column: 1/4;
-    grid-row: 2/3;
-  }
-
-  .outof {
-    grid-column: 3/4;
-    grid-row: 3/4;
-    margin-top: -4em;
-  }
-
-  .denver {
-    grid-row: 3/4;
-    margin-top: -2.5em;
-    grid-column: 3/4;
-    text-align: left;
-  }
-
-  .colorado {
-    grid-row: 3/4;
-    grid-column: 3/4;
-    margin-top: -4.5em;
-  } */
 
   .skills {
     margin-top: 3rem;
+    margin-bottom: 1em;
   }
 
   .work-heading {
@@ -108,7 +73,7 @@
     color: #fff;
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: center;
   }
 
