--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,9 +5,9 @@
     box-sizing: border-box;
   }
   
-  .navbarwide {
+  /* .navbarwide {
     position: relative;
-    top: 4.5em;
+    top: 5.5em;
     display: flex;
     justify-content: space-between;
     width: 100vw;
@@ -15,11 +15,11 @@
     font-size: 2em;
     font-weight: 900;
     padding: 0 2em 0 1em;
-    transform: rotate(-10deg);
+    transform: rotate(-10deg); 
   }
   .navbarwide a {
     color: #fff;
-  }
+  } */
 
   a.active {
     color: rgba(169,161,103,.6);
@@ -31,6 +31,10 @@
 
   #workwide {
     transform: rotate(30deg);
+  }
+
+  .periodw {
+    color: steelblue;
   }
 
   #aboutwide {
@@ -46,10 +50,13 @@
   }
 
   .name {
+    margin-top: -1em;
+    height: 30vh;
     font-size: 1.8em;
   }
 
   .lastname {
+    top: -1.3em;
     background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -59,8 +66,15 @@
   }
 
   .aboutsec {
-    padding-top: 2.5em;
+    margin-top: 1em;
+    height: 55vh;
     font-size: 2.5em;
+  }
+
+  .abouttrans {
+    position: relative;
+    top: -1em;
+    height: 15vh;
   }
 
   .skills {
@@ -78,8 +92,9 @@
   }
 
   #creations {
-    padding-top: 1em;
-    background-color: #10688685;
+    padding-top: 2em;
+    /* background-color: rgba(87, 153, 197, 0.7); */
+    background-color: rgba(250, 250, 250, .8);
     padding-left: 1em;
     padding-right: 1em;
     grid-template-columns: 2fr 2fr;
@@ -88,13 +103,22 @@
   }
 
   .card {
+    /* box-shadow: 1px 1px 10px rgba(0, 0, 0, .8); */
     border: none;
     max-width: 50vw;
   }
 
   .cardtext {
+    font-size: 1.3em;
     padding-top: 1em;
   }
+
+  button {
+    font-weight: 600;
+    font-size: 1.2em;
+    padding: 1em;
+  }
+
 
   .card:nth-child(1) {
     grid-column: 1/2;
@@ -109,4 +133,63 @@
     grid-column: 2/3;
     grid-row: 1/2;
   }
+
+  .icons img {
+    padding: 5px;
+    width: 4em;
+    height: 3.5em;
+  }
+
+  form {
+    width: 70vw;
+  }
+
+  form label {
+    font-size: 1.2em;
+  }
+
+  textarea {
+    height: 100px;
+  }
+
+  form button {
+    /* font-family: "Poppins", sans-serif; */
+    font-size: 1.2em;
+    padding: 1em;
+    margin-top: 1em;
+    margin-left: 25%;
+    width: 50%;
+    align-items: center;
+  }
+
+  .navbarbottom {
+    background-color: rgba(0,0,0,.7);
+    height: 8vh;
+    width: 100vw;
+    position: fixed;
+    overflow: hidden;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* padding-left: 1em;
+    padding-right: 1em; */
+    /* padding-bottom: 1em; */
+    font-family: "Poppins", sans-serif;
+    font-size: 2em;
+    font-weight: 900;
+    z-index: 2;
+  }
+
+  .navbarbottom a {
+    color: #fff;
+    align-items: center;
+    text-align: center;
+    padding: 1em;
+  }
+
+  .navbarbottom a:hover {
+    color: rgba(169,161,103,.6);
+  }
+
 }
